--- a/level10.css
+++ b/level10.css
@@ -3,7 +3,7 @@ body {
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
-background-image: url(images/bg.png);
+background-image: url(images/bg10.png);
  font-family: Arial, Helvetica, sans-serif;
 }
 
