--- a/level17.css
+++ b/level17.css
@@ -3,7 +3,7 @@ body {
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
-background-image: url(images/bg.png);
+background-image: url(images/smile.png);
  font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -30,7 +30,7 @@ background-image: url(images/bg.png);
 
 
   /* From https://css.glass */
-background: rgba(255, 255, 255, 0.19);
+background: rgba(255, 255, 255, 0.801);
 border-radius: 16px;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(1.8px);
