--- a/level19.css
+++ b/level19.css
@@ -6,7 +6,7 @@ body {
  background-color: aquamarine;
  font-family: Arial, Helvetica, sans-serif;
 
- background-image: url(images/bg4.png);
+ background-image: url(images/spajdrmen.png);
 }
 
 .grid {
@@ -25,13 +25,13 @@ body {
  padding: 1rem;
 
   width: 200px;
-  height: 100px;
+  height: 150px;
   border: 2px solid black;
   border-radius: 10px;
   margin: .1rem;
 
   /* From https://css.glass */
-background: rgba(255, 255, 255, 0.37);
+background: rgba(255, 255, 255, 0.774);
 border-radius: 16px;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(5px);
