--- a/level20.css
+++ b/level20.css
@@ -3,7 +3,7 @@ body {
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
- background-image: url(images/bg3.png);
+ background-image: url(images/koc.png);
  font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -30,7 +30,7 @@ body {
 
 
   /* From https://css.glass */
-background: rgba(255, 255, 255, 0.35);
+background: rgba(255, 255, 255, 0.781);
 border-radius: 16px;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(5px);
