--- a/level9.css
+++ b/level9.css
@@ -3,7 +3,7 @@ body {
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
- background-image: url(images/bg6.jpg);
+ background-image: url(images/bg9.png);
  font-family: Arial, Helvetica, sans-serif;
 }
 
