--- a/level18.css
+++ b/level18.css
@@ -5,7 +5,7 @@ body {
  justify-content: space-around;
  background-color: aquamarine;
  font-family: Arial, Helvetica, sans-serif;
- background-image: url(images/m1.png);
+ background-image: url(images/m1.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
