--- a/level16.css
+++ b/level16.css
@@ -3,7 +3,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
- background-image: url(images/skaly.jpg);
+ background-image: url(images/bg16.jpg);
+ background-size: cover;
   font-family: Arial, Helvetica, sans-serif;
  }
  
@@ -30,7 +31,7 @@ body {
  
  
    /* From https://css.glass */
- background: rgba(255, 255, 255, 0.19);
+ background: rgba(255, 255, 255, 0.575);
  border-radius: 16px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(1.8px);
