--- a/level17.css
+++ b/level17.css
@@ -3,7 +3,8 @@ body {
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
-background-image: url(images/smile.png);
+background-image: url(images/smile.jpg);
+background-size: cover;
  font-family: Arial, Helvetica, sans-serif;
 }
 
