--- a/level21.css
+++ b/level21.css
@@ -3,7 +3,8 @@ body {
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
- background-image: url(images/bg7.png);
+ background-image: url(images/lesac.jpg);
+ background-size: cover;
  font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -23,14 +24,14 @@ body {
  padding: 1rem;
 
   width: 200px;
-  height: 100px;
+  height: 160px;
   border: 2px solid black;
   border-radius: 10px;
   margin: .1rem;
 
 
   /* From https://css.glass */
-background: rgba(255, 255, 255, 0.35);
+background: rgba(255, 255, 255, 0.486);
 border-radius: 16px;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(5px);
