--- a/level15.css
+++ b/level15.css
@@ -60,7 +60,7 @@ h5 {
 }
 
 .green {
-  background-image: linear-gradient(-20deg, #ddd6f3 0%, #faaca8 100%, #faaca8 100%);
+  background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);
 
 
 }
