--- a/level11.css
+++ b/level11.css
@@ -61,5 +61,5 @@ h5 {
 }
 
 .green {
-  background-image: linear-gradient( 135deg, #FFA8A8 10%, #FCFF00 100%);
+  background-image: linear-gradient(to top, #d299c2 0%, #fef9d7 100%);
 }
