--- a/level12.css
+++ b/level12.css
@@ -61,6 +61,6 @@ h5 {
 }
 
 .green {
-  background: whitesmoke;
+  background: whitesmoke;background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);
 
 }
