--- a/level13.css
+++ b/level13.css
@@ -60,7 +60,6 @@ h5 {
 }
 
 .green {
-  background-color: #FAD961;
-background-image: linear-gradient(90deg, #FAD961 0%, #F76B1C 100%);
+  background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
 
 }
