--- a/level16.css
+++ b/level16.css
@@ -61,5 +61,5 @@ body {
  }
  
  .green {
-   background-image: linear-gradient( 135deg, #69FF97 10%, #00E4FF 100%);
+  background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
  }
