--- a/level17.css
+++ b/level17.css
@@ -61,5 +61,5 @@ h5 {
 }
 
 .green {
-  background-image: linear-gradient( 135deg, #69FF97 10%, #00E4FF 100%);
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
 }
