--- a/level18.css
+++ b/level18.css
@@ -65,5 +65,5 @@ h5 {
 }
 
 .green {
-  background-image: linear-gradient( 135deg, #FFA8A8 10%, #FCFF00 100%);
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
 }
