--- a/level19.css
+++ b/level19.css
@@ -62,6 +62,6 @@ h5 {
 }
 
 .green {
-  background: rgba(127, 245, 245, 0.555);
+  background-image: linear-gradient(120deg, #a1c4fd9f 0%, #c2e9fb8c 100%);
 
 }
