--- a/level2.css
+++ b/level2.css
@@ -60,5 +60,5 @@ h5 {
 }
 
 .green {
-  background-image: linear-gradient( 135deg, #F6D242 10%, #FF52E5 100%);
+  background-image: linear-gradient(to top, #0fd850 0%, #f9f047 100%);
 }
