--- a/level21.css
+++ b/level21.css
@@ -61,8 +61,7 @@ h5 {
 }
 
 .green {
-  background-color: #85FFBD;
-background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+  background-image: linear-gradient(to top, #ff9a9e 0%, #fecfef 99%, #fecfef 100%);
 
 
 
