--- a/level22.css
+++ b/level22.css
@@ -3,7 +3,8 @@ body {
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
- background-image: url(images/bg8.png);
+ background-image: url(images/mara.jpg);
+ background-size: cover;
  font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -30,7 +31,7 @@ body {
 
 
   /* From https://css.glass */
-background: rgba(255, 255, 255, 0.35);
+background: rgba(255, 255, 255, 0.589);
 border-radius: 16px;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(5px);
@@ -60,7 +61,7 @@ h5 {
 }
 
 .green {
-  background-image: linear-gradient(-20deg, #ddd6f3 0%, #faaca8 100%, #faaca8 100%);
+  background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
 
 
 }
