--- a/level4.css
+++ b/level4.css
@@ -62,5 +62,5 @@ h5 {
 }
 
 .green {
-  background-image: linear-gradient( 135deg, #FFA8A8 10%, #FCFF00 100%);
+  background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);
 }
