--- a/level6.css
+++ b/level6.css
@@ -61,7 +61,6 @@ h5 {
 }
 
 .green {
-  background-color: #FAD961;
-background-image: linear-gradient(90deg, #FAD961 0%, #F76B1C 100%);
+  background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);
 
 }
