--- a/level7.css
+++ b/level7.css
@@ -60,9 +60,7 @@ h5 {
 }
 
 .green {
-  background-color: #85FFBD;
-background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
-
+  background-image: linear-gradient(-20deg, #d558c8 0%, #24d292 100%);
 
 
 
