--- a/level9.css
+++ b/level9.css
@@ -60,5 +60,5 @@ h5 {
 }
 
 .green {
-  background-image: linear-gradient( 135deg, #F6D242 10%, #FF52E5 100%);
+  background-image: linear-gradient(to right, #eea2a2 0%, #bbc1bf 19%, #57c6e1 42%, #b49fda 79%, #7ac5d8 100%);
 }
