--- a/style.css
+++ b/style.css
@@ -60,5 +60,5 @@ h5 {
 }
 
 .green {
-  background-image: linear-gradient( 135deg, #FFCF71 10%, #2376DD 100%);
+  background-image: linear-gradient(to right, #ffc3a0 0%, #ffafbd 100%);
 }
