--- a/level11.css
+++ b/level11.css
@@ -6,6 +6,10 @@ body {
  background-color: aquamarine;
  font-family: Arial, Helvetica, sans-serif;
  background-image: url(images/bg11.png);
+ background-size: cover;
+ background-position: center;
+ background-repeat: no-repeat;
+ background-attachment: fixed;
 }
 
 .grid {
