--- a/level19.css
+++ b/level19.css
@@ -8,6 +8,9 @@ body {
 
  background-image: url(images/skaly.jpg);
  background-size: cover;
+ background-position: center;
+ background-repeat: no-repeat;
+ background-attachment: fixed;
 }
 
 .grid {
