--- a/level12.css
+++ b/level12.css
@@ -7,6 +7,10 @@ body {
  font-family: Arial, Helvetica, sans-serif;
 
  background-image: url(images/bg12.png);
+ background-size: cover;
+ background-position: center;
+ background-repeat: no-repeat;
+ background-attachment: fixed;
 }
 
 .grid {
