--- a/level22 - Copy (6).css
+++ b/level22 - Copy (6).css
@@ -3,8 +3,11 @@ body {
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
- background-image: url(images/mara.jpg);
- background-size: cover;
+  background-image: url(images/mara.jpg);
+ background-size: cover; background-size: cover;
+ background-position: center;
+ background-repeat: no-repeat;
+ background-attachment: fixed;
  font-family: Arial, Helvetica, sans-serif;
 }
 
