--- a/level4.css
+++ b/level4.css
@@ -7,6 +7,9 @@ body {
  font-family: Arial, Helvetica, sans-serif;
  background-image: url(images/ocko.jpg);
  background-size: cover;
+ background-position: center;
+ background-repeat: no-repeat;
+ background-attachment: fixed;
 }
 
 .grid {
