--- a/level6.css
+++ b/level6.css
@@ -4,7 +4,11 @@ body {
  align-items: center;
  justify-content: space-around;
  background-image: url(images/lieta.jpg);
+
  background-size: cover;
+ background-position: center;
+ background-repeat: no-repeat;
+ background-attachment: fixed;
  font-family: Arial, Helvetica, sans-serif;
 }
 
