--- a/level8.css
+++ b/level8.css
@@ -4,6 +4,10 @@ body {
  align-items: center;
  justify-content: space-around;
  background-image: url(images/bg8.png);
+ background-size: cover;
+ background-position: center;
+ background-repeat: no-repeat;
+ background-attachment: fixed;
  font-family: Arial, Helvetica, sans-serif;
 }
 
