--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
  align-items: center;
  justify-content: space-around;
  background-image: url(images/bg2.png);
+ background-size: cover;
+ background-position: center;
+ background-repeat: no-repeat;
+ background-attachment: fixed;
  font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -60,5 +64,5 @@ h5 {
 }
 
 .green {
-  background-image: linear-gradient(to right, #ffc3a0 0%, #ffafbd 100%);
+  background-image: linear-gradient(to top, #b3ffab 0%, #12fff7 100%);
 }
