--- a/level23.css
+++ b/level23.css
@@ -3,7 +3,7 @@ body {
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
-  background-image: url(images/mara.jpg);
+  background-image: url(images/povoden.jpg);
  background-size: cover; background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
@@ -42,14 +42,10 @@ backdrop-filter: blur(5px);
 border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
+
+
 .box:hover {
-box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.164);
- 
-
- 
-}
-
-img {
+  box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.54);   }   img {
 
 
   display:none
@@ -58,13 +54,27 @@ img {
 h5 {
   font-size: 1.5rem;
 }
+h3 {
+  background-color: whitesmoke;
+  padding: 1rem;
+  border-radius: 15px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.26);
+}
+
+h3:hover {
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.164);
+   
+  
+   
+  }
+
 
 .hide {
   display:none
 }
 
 .green {
-  background-image: linear-gradient(-20deg, #ddd6f3 0%, #faaca8 100%, #faaca8 100%);
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
 
 
 }
