--- a/level7.css
+++ b/level7.css
@@ -4,6 +4,10 @@ body {
  align-items: center;
  justify-content: space-around;
  background-image: url(images/bg7.png);
+ background-size: cover;
+ background-position: center;
+ background-repeat: no-repeat;
+ background-attachment: fixed;
  font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -23,7 +27,7 @@ body {
  padding: 1rem;
 
   width: 200px;
-  height: 100px;
+  height: 90px;
   border: 2px solid black;
   border-radius: 10px;
   margin: .1rem;
@@ -38,14 +42,10 @@ backdrop-filter: blur(5px);
 border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
+
+
 .box:hover {
-box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.164);
- 
-
- 
-}
-
-img {
+  box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.54);   }   img {
 
 
   display:none
@@ -54,6 +54,19 @@ img {
 h5 {
   font-size: 1.5rem;
 }
+h3 {
+  background-color: whitesmoke;
+  padding: 1rem;
+  border-radius: 15px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.26);
+}
+
+h3:hover {
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.164);
+   
+  
+   
+  }
 
 .hide {
   display:none
