--- a/level9.css
+++ b/level9.css
@@ -27,7 +27,7 @@ body {
  padding: 1rem;
 
   width: 200px;
-  height: 100px;
+  height: 90px;
   border: 2px solid black;
   border-radius: 10px;
   margin: .1rem;
@@ -49,7 +49,8 @@ box-shadow: 4px 4px 4px 1px rgba(17, 17, 17, 0.767);
  
 }
 
-img {
+.box:hover {
+  box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.54);   }   img {
 
 
   display:none
@@ -58,6 +59,19 @@ img {
 h5 {
   font-size: 1.5rem;
 }
+h3 {
+  background-color: whitesmoke;
+  padding: 1rem;
+  border-radius: 15px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.26);
+}
+
+h3:hover {
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.164);
+   
+  
+   
+  }
 
 .hide {
   display:none
