--- a/level22.css
+++ b/level22.css
@@ -73,7 +73,6 @@ h3:hover {
 }
 
 .green {
-  background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
-
+  background-image: linear-gradient(to right, #a8caba 0%, #5d4157ce 100%);
 
 }
