--- a/level23.css
+++ b/level23.css
@@ -74,7 +74,7 @@ h3:hover {
 }
 
 .green {
-  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+  background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
 
 
 }
