--- a/level27.css
+++ b/level27.css
@@ -3,7 +3,7 @@ body {
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
-  background-image: url(images/mara.jpg);
+  background-image: url(images/olympia.JPG);
  background-size: cover; background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
@@ -73,7 +73,7 @@ h3:hover {
 }
 
 .green {
-  background-image: linear-gradient(-20deg, #ddd6f3 0%, #faaca8 100%, #faaca8 100%);
+  background-image: linear-gradient(to right, #b8cbb8 0%, #b8cbb8 0%, #b465da 0%, #cf6cc9 33%, #ee609c 66%, #ee609c 100%);
 
 
 }
