--- a/level23.css
+++ b/level23.css
@@ -3,7 +3,7 @@ body {
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
-  background-image: url(images/povoden.jpg);
+  background-image: url(images/b10.jpg);
  background-size: cover; background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
