--- a/level11.css
+++ b/level11.css
@@ -70,9 +70,9 @@ h3:hover {
   }
 
 .hide {
-  display:none
+  /* display:none; */
+  visibility: hidden;
 }
-
 .green {
   background-image: linear-gradient(to top, #d299c2 0%, #fef9d7 100%);
 }
