--- a/level10.css
+++ b/level10.css
@@ -69,9 +69,9 @@ h3:hover {
   }
 
 .hide {
-  display:none
+  /* display:none; */
+  visibility: hidden;
 }
-
 .green {
   background-image: linear-gradient( 135deg, #69FF97 10%, #00E4FF 100%);
 }
