--- a/level15.css
+++ b/level15.css
@@ -69,9 +69,9 @@ h3:hover {
   }
 
 .hide {
-  display:none
+  /* display:none; */
+  visibility: hidden;
 }
-
 .green {
   background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);
 
