--- a/level18.css
+++ b/level18.css
@@ -71,9 +71,9 @@ h3:hover {
   }
 
 .hide {
-  display:none
+  /* display:none; */
+  visibility: hidden;
 }
-
 .green {
   background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
 }
