--- a/level19.css
+++ b/level19.css
@@ -70,9 +70,9 @@ h3:hover {
   }
 
 .hide {
-  display:none
+  /* display:none; */
+  visibility: hidden;
 }
-
 .green {
   background-image: linear-gradient(120deg, #a1c4fd9f 0%, #c2e9fb8c 100%);
 
