--- a/level22.css
+++ b/level22.css
@@ -69,9 +69,9 @@ h3:hover {
   }
 
 .hide {
-  display:none
+  /* display:none; */
+  visibility: hidden;
 }
-
 .green {
   background-image: linear-gradient(to right, #a8caba 0%, #5d4157ce 100%);
 
