--- a/level23.css
+++ b/level23.css
@@ -70,9 +70,9 @@ h3:hover {
 
 
 .hide {
-  display:none
+  /* display:none; */
+  visibility: hidden;
 }
-
 .green {
   background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
 
