--- a/level24.css
+++ b/level24.css
@@ -69,9 +69,9 @@ h3:hover {
   }
 
 .hide {
-  display:none
+  /* display:none; */
+  visibility: hidden;
 }
-
 .green {
   background-image: linear-gradient(45deg, #8baaaa 0%, #ae8b9c 100%);
 
