--- a/level29.css
+++ b/level29.css
@@ -69,9 +69,9 @@ h3:hover {
   }
 
 .hide {
-  display:none
+  /* display:none; */
+  visibility: hidden;
 }
-
 .green {
   background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
 
