--- a/level7.css
+++ b/level7.css
@@ -69,9 +69,9 @@ h3:hover {
   }
 
 .hide {
-  display:none
+  /* display:none; */
+  visibility: hidden;
 }
-
 .green {
   background-image: linear-gradient(-20deg, #d558c8 0%, #24d292 100%);
 
