--- a/level10.css
+++ b/level10.css
@@ -71,7 +71,8 @@ h3:hover {
 .hide {
   /* display:none; */
   visibility: hidden;
-}
-.green {
+  width: 237px;
+  height: 134px;
+}.green {
   background-image: linear-gradient( 135deg, #69FF97 10%, #00E4FF 100%);
 }
