--- a/level15.css
+++ b/level15.css
@@ -71,8 +71,9 @@ h3:hover {
 .hide {
   /* display:none; */
   visibility: hidden;
-}
-.green {
+  width: 237px;
+  height: 134px;
+}.green {
   background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);
 
 
