--- a/level17.css
+++ b/level17.css
@@ -71,7 +71,8 @@ h3:hover {
 .hide {
   /* display:none; */
   visibility: hidden;
-}
-.green {
+  width: 237px;
+  height: 134px;
+}.green {
   background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
 }
