--- a/level19.css
+++ b/level19.css
@@ -72,8 +72,9 @@ h3:hover {
 .hide {
   /* display:none; */
   visibility: hidden;
-}
-.green {
+  width: 237px;
+  height: 134px;
+}.green {
   background-image: linear-gradient(120deg, #a1c4fd9f 0%, #c2e9fb8c 100%);
 
 }
