--- a/level23.css
+++ b/level23.css
@@ -72,8 +72,9 @@ h3:hover {
 .hide {
   /* display:none; */
   visibility: hidden;
-}
-.green {
+  width: 237px;
+  height: 134px;
+}.green {
   background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
 
 
