--- a/level24.css
+++ b/level24.css
@@ -71,8 +71,9 @@ h3:hover {
 .hide {
   /* display:none; */
   visibility: hidden;
-}
-.green {
+  width: 237px;
+  height: 134px;
+}.green {
   background-image: linear-gradient(45deg, #8baaaa 0%, #ae8b9c 100%);
 
 
