--- a/level26.css
+++ b/level26.css
@@ -71,8 +71,9 @@ h3:hover {
 .hide {
   /* display:none; */
   visibility: hidden;
+  width: 237px;
+  height: 134px;
 }
-
 .green {
   background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
 
