--- a/level30.css
+++ b/level30.css
@@ -71,7 +71,8 @@ h3:hover {
 .hide {
   /* display:none; */
   visibility: hidden;
-}
-.green {
+  width: 237px;
+  height: 134px;
+}.green {
   background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
 }
