--- a/level32.css
+++ b/level32.css
@@ -16,6 +16,7 @@ body {
   flex-wrap: wrap;
   max-width: 1500px;
   max-height: 1000px;
+ 
 }
 
 .box {
@@ -31,6 +32,7 @@ body {
   border: 2px solid black;
   border-radius: 10px;
   margin: .1rem;
+ 
 
 
   /* From https://css.glass */
@@ -71,9 +73,13 @@ h3:hover {
 .hide {
   /* display:none; */
   visibility: hidden;
+  width: 237px;
+  height: 134px;
 }
 .green {
   background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
 
 
 }
+
+
