--- a/level7.css
+++ b/level7.css
@@ -71,8 +71,9 @@ h3:hover {
 .hide {
   /* display:none; */
   visibility: hidden;
-}
-.green {
+  width: 237px;
+  height: 134px;
+}.green {
   background-image: linear-gradient(-20deg, #d558c8 0%, #24d292 100%);
 
 
