--- a/level23.css
+++ b/level23.css
@@ -3,8 +3,8 @@ body {
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
-  background-image: url(images/b10.jpg);
- background-size: cover; background-size: cover;
+  background-image: url(images/b11.JPG);
+ background-size: cover; 
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
