--- a/level21.css
+++ b/level21.css
@@ -1,14 +1,14 @@
 body {
- display: flex;
- flex-direction: column;
- align-items: center;
- justify-content: space-around;
- background-image: url(images/lesac.jpg);
- background-size: cover;
- background-position: center;
- background-repeat: no-repeat;
- background-attachment: fixed;
- font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  background-image: url(images/lesac.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .grid {
@@ -24,33 +24,30 @@ body {
   align-items: center;
   justify-content: space-around;
   background-color: rgb(217, 247, 247);
- padding: 1rem;
+  padding: 1rem;
 
   width: 200px;
-  height: 160px;
+  height: 100px;
   border: 2px solid black;
   border-radius: 10px;
-  margin: .1rem;
-
+  margin: 0.1rem;
 
   /* From https://css.glass */
-background: rgba(255, 255, 255, 0.486);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(5px);
--webkit-backdrop-filter: blur(5px);
-border: 1px solid rgba(255, 255, 255, 0.3);
+  background: rgba(255, 255, 255, 0.486);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
-
-
 
 .box:hover {
-  box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.54);   }   img {
-
-
-  display:none
+  box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.54);
 }
-  
+img {
+  display: none;
+}
+
 h5 {
   font-size: 1.5rem;
 }
@@ -63,21 +60,19 @@ h3 {
 
 h3:hover {
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.164);
-   
-  
-   
-  }
+}
 
 .hide {
   /* display:none; */
   visibility: hidden;
   width: 237px;
   height: 134px;
-}.green {
-  background-image: linear-gradient(to top, #ff9a9e 0%, #fecfef 99%, #fecfef 100%);
-
-
-
-
-
+}
+.green {
+  background-image: linear-gradient(
+    to top,
+    #ff9a9e 0%,
+    #fecfef 99%,
+    #fecfef 100%
+  );
 }
