--- a/level11.css
+++ b/level11.css
@@ -5,7 +5,7 @@ body {
  justify-content: space-around;
  background-color: aquamarine;
  font-family: Arial, Helvetica, sans-serif;
- background-image: url(images/bg11.png);
+ background-image: url(images/inn.JPG);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
