--- a/level14.css
+++ b/level14.css
@@ -3,7 +3,7 @@ body {
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
- background-image: url(images/bg14.png);
+ background-image: url(images/lich.JPG);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
@@ -27,7 +27,7 @@ body {
  padding: 1rem;
 
   width: 200px;
-  height: 180px;
+  height: 150px;
   border: 2px solid black;
   border-radius: 10px;
   margin: .1rem;
@@ -52,7 +52,7 @@ border: 1px solid rgba(255, 255, 255, 0.3);
 }
   
 h5 {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 h3 {
   background-color: whitesmoke;
