--- a/level42.css
+++ b/level42.css
@@ -3,7 +3,7 @@ body {
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
-  background-image: url(images/roma2.JPG);
+  background-image: url(images/b2.JPG);
  background-size: cover; background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
@@ -36,7 +36,7 @@ body {
 
 
   /* From https://css.glass */
-background: rgba(255, 255, 255, 0.589);
+background: rgba(255, 255, 255, 0.801);
 border-radius: 16px;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(5px);
