--- a/level47.css
+++ b/level47.css
@@ -3,7 +3,7 @@ body {
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
-  background-image: url(images/koloseum.JPG);
+  background-image: url(images/schody.JPG);
  background-size: cover; background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
@@ -54,7 +54,7 @@ border: 1px solid rgba(255, 255, 255, 0.3);
 }
   
 h5 {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 h3 {
   background-color: whitesmoke;
